Alternator now uses JSON for POI and Shape